# Area

./: .env  .gitignore  README.md  docker-compose.yml  schema.sql
API/: .eslintrc.js  .gitignore  .prettierrc.json  Area.postman_collection.json  Dockerfile  README.md  index.ts  package-lock.json  package.json  tsconfig.json
API/about/: route.config.ts
API/about/controllers/: about.controller.ts
API/about/middlewares/: token.management.middleware.ts
API/about/models/: authed.about.response.model.ts  base.about.response.model.ts  unauthed.about.response.model.ts
API/about/services/: about.services.ts
API/auth/: routes.config.ts
API/auth/controllers/: auth.controller.ts
API/auth/middlewares/: verify.email.middleware.ts  verify.login.middleware.ts  verify.register.middleware.ts  verify.token.middleware.ts
API/auth/models/: login.request.model.ts  oauth.response.model.ts  register.request.model.ts  register.response.model.ts  token.request.model.ts
API/common/config/: env.config.ts
API/common/controllers/: common.controller.ts
API/common/models/: base.model.ts  (+4 more)
API/github/: routes.config.ts
API/reddit/: routes.config.ts
API/spotify/: routes.config.ts
API/widget/: routes.config.ts
mock-api/: Cargo.toml  Dockerfile
mock-api/src/: arguments.rs  data.rs  github.rs  main.rs  oauth.rs  reddit.rs  responses.rs  spotify.rs  widgets.rs
vue-front/: .eslintrc.js  Dockerfile  README.md  nginx.conf  notes  package-lock.json  package.json
vue-front/src/: App.vue  api.ts  definitions.ts  github.ts  main.ts  reddit.ts  service.ts  spotify.ts  widgets.ts
(+125 files in other folders)
