[package]
name = "area-mock-api"
version = "0.1.0"
authors = ["agarof <alban.garofoli@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-service = "1.0.6"
actix-cors = "0.5.4"
actix-web-httpauth = "0.5.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
clap = "2.33.3"

[profile.release]
lto = "fat"
